# prototype

./: .gitignore  meson.build  readme.md  unix-build.sh  win-build.bat
cross/: linux.txt  macos.txt  windows.txt
editor/src/: main.cpp  meson.build
engine/: meson.build
engine/includes/: engine.hpp  meson.build  shader_manager.h
engine/includes/core/: camera.h  core.hpp  engine.h  glwrapper.h  input.h  keycodes.h  logger.h  renderer.h  window.h
engine/includes/core/event/: e_key.h  e_mouse.h  e_window.h  event.h  events.hpp
engine/includes/core/layer/: debug_layer.h  grid.h  imgui_layer.h  layer.h  layer_stack.h  layers.hpp  scene_3d_layer.h
engine/includes/render/: buffer.h  camera.h  mesh.h  render.hpp  scene.h  shader.h  texture.h  vao.h  vertex_array.h  window.h
engine/includes/shaders/: default_shaders.hh  grid_shaders.hh  shaders.hpp
engine/old/core/: meson.build  runtime.cpp  runtime.h
engine/old/core/ui/: meson.build
engine/old/core/wrapper/: meson.build  wrapper.cpp  wrapper.h
engine/old/render/: meson.build  render.h  renderer.cpp  renderer.h  textblitter.cpp  textblitter.h
engine/old/render/api/: meson.build  renderapi.h
engine/old/render/api/opengl/: meson.build  oglassetmanager.cpp  oglassetmanager.h  oglbackend.cpp  oglbackend.h
engine/old/render/api/opengl/buffer/: buffer.cpp  buffer.h  frame.cpp  frame.h  index.cpp  index.h  meson.build  vertexarray.cpp  vertexarray.h
engine/old/render/api/opengl/model/: meson.build
engine/old/render/api/opengl/shader/: meson.build  shader.cpp  shader.h
engine/old/render/api/opengl/texture/: meson.build  texture.cpp  texture.h
engine/old/render/context/: context.cpp  context.h  meson.build
engine/old/render/window/: meson.build  window.cpp  window.h
engine/old/util/: constants.hpp  meson.build  util.h
engine/old/util/logger/: logger.cpp  logger.h  meson.build
engine/src/: meson.build  shader_manager.cpp
engine/src/core/: camera.cpp  engine.cpp  input.cpp  logger.cpp  meson.build  window.cpp
engine/src/core/layer/: debug_layer.cpp  grid.cpp  imgui_layer.cpp  layer.cpp  layer_stack.cpp  meson.build  scene_3d_layer.cpp  stack.cpp
engine/src/render/: buffer.cpp  context.cpp  meson.build  scene.cpp  shader.cpp  texture.cpp  vao.cpp  vertex_array.cpp
game/res/shaders/: grid.frag  grid.vert
game/src/: 1.cpp  main.cpp  meson.build
lib/pkgconfig/: fmt.pc
shaders/: meson.build  shader_to_header.py
shaders/default/: default.frag  default.vert  meson.build
shaders/grid/: grid.frag  grid.vert  meson.build
subprojects/: assimp.wrap  clay.wrap
subprojects/packagefiles/assimp_patch/: meson.build
subprojects/packagefiles/clay_patch/: meson.build
subprojects/packagefiles/gleq_patch/: meson.build
subprojects/packagefiles/stb_patch/: meson.build
