
subdir('buffer')
subdir('model')
subdir('shader')
subdir('texture')
ogl_backend_sources = files(
    'oglbackend.cpp',
    'oglassetmanager.cpp'
)

ogl_backend_sources += ogl_buffer_source

ogl_backend_sources += ogl_model_source

ogl_backend_sources += ogl_shader_source

ogl_backend_sources += ogl_texture_source
